<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.wizard</groupId>
	<artifactId>wizard-cxf-client</artifactId>
	<version>1.0.0</version>
	<packaging>jar</packaging>

	<name>wizard-cxf-client</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<mainClass>com.wizard.cxf.client.CxfClient</mainClass>

		<!-- wizard -->
		<wizard.version>1.0.0</wizard.version>

		<!-- dependency -->
		<junit.version>4.10</junit.version>
		<org.springframework.version>3.1.2.RELEASE</org.springframework.version>
		<org.apache.cxf.version>2.5.9</org.apache.cxf.version>
		<org.apache.cxf.transports.common.version>2.5.9</org.apache.cxf.transports.common.version>
		<slf4j.version>1.6.1</slf4j.version>
		<log4j.version>1.2.16</log4j.version>

		<!-- build -->
		<java.version>1.7</java.version>
		<maven-compiler-plugin.version>2.5.1</maven-compiler-plugin.version>
		<maven-deploy-plugin.version>2.8-SNAPSHOT</maven-deploy-plugin.version>
		<maven-surefire-plugin.version>2.10</maven-surefire-plugin.version>
		<exec-maven-plugin.version>1.2.1</exec-maven-plugin.version>
	</properties>

	<dependencies>

		<!-- wizard -->
		<dependency>
			<groupId>com.wizard</groupId>
			<artifactId>wizard-util</artifactId>
			<version>${wizard.version}</version>
		</dependency>

		<dependency>
			<groupId>com.wizard</groupId>
			<artifactId>wizard-j2ee</artifactId>
			<version>${wizard.version}</version>
		</dependency>

		<!-- junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- spring -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${org.springframework.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${org.springframework.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${org.springframework.version}</version>
		</dependency>

		<!-- apache cxf -->
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-core</artifactId>
			<version>${org.apache.cxf.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-frontend-jaxws</artifactId>
			<version>${org.apache.cxf.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-transports-http</artifactId>
			<version>${org.apache.cxf.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-transports-common</artifactId>
			<version>${org.apache.cxf.transports.common.version}</version>
		</dependency>


		<!-- LOG -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>${log4j.version}</version>
		</dependency>
	</dependencies>
	<build>
		<finalName>wizard-cxf-client</finalName>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>${maven-deploy-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<argLine>-XX:-UseSplitVerifier</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>${exec-maven-plugin.version}</version>
				<configuration>
					<executable>java</executable>
					<arguments>
						<argument>-server</argument>
						<argument>-XX:MaxPermSize=64m</argument>
						<argument>-Xms256m</argument>
						<argument>-Xmx256m</argument>
						<argument>-classpath</argument>
						<classpath />
						<argument>${mainClass}</argument>
					</arguments>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
